--- a/index.html
+++ b/index.html
@@ -622,6 +622,28 @@ header, .context-menu, .megamenu-content, footer{
 <span>　　　6.皆さんがN1に合格するのを願ってやみません。</span>
 <span>　　　7.元気なお子様出産されることを願って（祈って）やみません。</span>
 <span>　　　8.貴国の経済成長を祈ってやみません。</span>
-<img src="https://nihongonosensei.net/pic/I1_026.jpg" referrerpolicy="no-referrer" alt="てやまない"></p><hr /></div></div>
+<img src="https://nihongonosensei.net/pic/I1_026.jpg" referrerpolicy="no-referrer" alt="てやまない"></p><hr /><h2 id='といったらない～といったらありはしない～ったらない～といったらありゃしない'><a href='https://nihongonosensei.net/?p=3710'><span>~といったらない、～といったらありはしない、～ったらない、～といったらありゃしない</span></a></h2><h3 id='意味-10'><span>意味：</span></h3><p><span>　　　とても～だ、すごい～だ、言葉でうまく言えないほど～だ。</span></p><h3 id='接続-10'><span>接続：</span></h3><p><span>　　　い形容詞＋といったらない</span>
+<span>　　　名詞＋といったらない</span></p><h3 id='例文-10'><span>例文：</span></h3><p><span>　　　1.あのラーメン屋の汚さといったらない。</span>
+<span>　　　2.次から次へと情報が入って来て、忙しいったらない。</span>
+<span>　　　3.そんな生き方、みっともないったらありゃしない。</span>
+<span>　　　4.橋本環奈ちゃんの可愛さったらない。</span></p><hr /><h2 id='まい～まいと'><a href='https://nihongonosensei.net/?p=18773'><span>~まい、～まいと</span></a></h2><h3 id='意味-11'><span>意味：</span></h3><p><span>　　　「まい」絶対～しない、～しないだろう。</span>
+<span>　　　「まいと」絶対～しないという気持ち。</span></p><h3 id='接続-11'><span>接続：</span></h3><p><span>　　　Vる＋まい/まいと</span></p><h3 id='例文-11'><span>例文：</span></h3><p><span>　　　1.この難病は治るまい。</span>
+<span>　　　2.ベトナムはもう電車ができたから、渋滞するまい。</span>
+<span>　　　3.昨日から二度と酒を飲むまいと決心した。</span>
+<span>　　　4.もう親からの世話は要るまいと、独立を決めた。</span>
+<span>　　　5.事故で亡くなった方の遺族の悲しみは消えまい。</span>
+<span>　　　6.二度とタバコを吸うまいとみんなに宣言した。</span>
+<span>　　　7.君にはこんなのがわかるまい。</span>
+<span>　　　8.あんたにはこんなのがわかりますまい。</span>
+<span>　　　9.赤ちゃんにこんな食べ物を食べさせまい。</span>
+<span>　　　10.子供たちにこんなバカなことを学ばせまい。</span>
+<span>　　　11.そんなことあるまい。</span></p><hr /><h2 id='べからず'><a href='https://nihongonosensei.net/?p=9219'><span>~べからず</span></a></h2><h3 id='意味-12'><span>意味：</span></h3><p><span>　　　するべきではないという意味。</span>
+<span>　　　看板に書かれている場合が多い。</span>
+<span>　　　会話では使わない。</span></p><h3 id='接続-12'><span>接続：</span></h3><p><span>　　　Vる＋べからず</span>
+<span>　　　するべからず/すべからず</span></p><h3 id='例文-12'><span>例文：</span></h3><p><span>　　　1.産業廃棄物を山に捨てるべからず。</span>
+<span>　　　2.工業汚水を川に流すべからず。</span>
+<span>　　　3.山にごみを捨てるべからず。</span>
+<span>　　　4.野生動物出没、この先入るべからず。</span>
+<img src="https://nihongonosensei.net/pic/21042907.jpg" referrerpolicy="no-referrer" alt="bekarazu"></p><hr /></div></div>
 </body>
 </html>
