--- a/index.html
+++ b/index.html
@@ -664,6 +664,21 @@ header, .context-menu, .megamenu-content, footer{
 <span>　　　4.子供じゃあるまいし、社内で先輩を見たら挨拶するのは当たり前でしょう？</span>
 <span>　　　5.ここは東京じゃあるまいし、24時間営業のレストランはないんだよ。</span>
 <span>　　　6.20代ではあるまいし、こんな肉体労働はできるまい。</span>
-<img src="https://nihongonosensei.net/pic/I1_040.jpg" referrerpolicy="no-referrer" alt="ではあるまいし"></p><hr /></div></div>
+<img src="https://nihongonosensei.net/pic/I1_040.jpg" referrerpolicy="no-referrer" alt="ではあるまいし"></p><hr /><h2 id='aべくしてｂする'><a href='https://nihongonosensei.net/?p=9320'><span>AべくしてＢする</span></a></h2><h3 id='意味-15'><span>意味：</span></h3><p><span>　　　Aになるのは当然だからＢする。</span>
+<span>　　　AとＢが同じ場合が多い。古い書き言葉。</span>
+<span>　　　「AなるべくＢした」をよく使う。</span></p><h3 id='接続-15'><span>接続：</span></h3><p><span>　　　Ⅴる＋べくして</span></p><h3 id='例文-15'><span>例文：</span></h3><p><span>　　　1.全然勉強してないからＮ1に落ちるべくして落ちた。</span>
+<span>　　　2.あんな高いところから飛び降りたから死ぬべくして死んだよ。</span>
+<span>　　　3.論点もわからず討論に参加したわけだから、相手に攻められるべくして攻められた。</span>
+<span>　　　4.ここには交通標識一つもなかったから、今回の事故はおこるべくして起こった事件であった。</span>
+<span>　　　5.あなたとは結婚すべくして結婚した。</span>
+<span>　　　6.いつも勝ち組は成功するべくして成功してるように見える。</span>
+<span>　　　7.練習不足だから、試合に負けるべくして負けた。</span>
+<span>　　　8.私たちは付き合うべくして付き合ってるわけですよ。</span></p><hr /><h2 id='べくもない'><a href='https://nihongonosensei.net/?p=9322'><span>~べくもない</span></a></h2><h3 id='意味-16'><span>意味：</span></h3><p><span>　　　同然～だから、～しなくてもよい。</span></p><h3 id='接続-16'><span>接続：</span></h3><p><span>　　　Vる＋べくもない</span>
+<span>　　　するべくもない/すべくもない</span>
+<span>　　　※望む、比べる、疑うなどとよく使われる。</span></p><h3 id='例文-16'><span>例文：</span></h3><p><span>　　　1.アップルがうちより大きい会社ということは、比べるべくもない。</span>
+<span>　　　2.アメリカが韓国より広いことは比べるべくもない。</span>
+<span>　　　3.新宿はラーメン激戦区だから、今からラーメンで成功するのは極めて難しいことは疑うべくもない。</span>
+<span>　　　4.主力メンバーが5人も抜けているから、勝つことは望むべくもない。</span>
+<span>　　　5.これ以上の給料は望むべくもないのに、どうしてほかの大手企業の面接に行きたがってるかわかんない。</span></p><hr /></div></div>
 </body>
 </html>
